--- a/templates/home.html
+++ b/templates/home.html
@@ -14,10 +14,42 @@
     </div>
 {% endblock %}
 {% block pie %}
+    <div class="chart-wrapper">
+        <div class="chart-title">
+            Pokemon breakdown
+        </div>
+        <div class="chart-stage">
+            <div id="pokemon-pie"></div>
+        </div>
+    </div>
 {% endblock %}
 {% block select1 %}
+    <div class="chart-wrapper">
+        <div class="chart-title">
+            PokeMenu
+        </div>
+        <div class="chart-stage">
+            <div id="pokemenu-main"></div>
+        </div>
+    </div>
 {% endblock %}
 {% block select2 %}
+    <div class="chart-wrapper">
+        <div class="chart-title">
+            Pokemon Select
+        </div>
+        <div class="chart-stage">
+            <div id="pokemenu-select"></div>
+        </div>
+    </div>
 {% endblock %}
 {% block data %}
+    <div class="chart-wrapper">
+        <div class="chart-title">
+            Pokemon Data
+        </div>
+        <div class="chart-stage">
+            <div id="pokemon-data-nd"></div>
+        </div>
+    </div>
 {% endblock %}
