--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,23 @@
 {% extends "index.html" %}
 
 {% block paragraph %}
-    <p>Here is where the text info will go!</p>
+    <p>Here are some visual representations of all of the current Pokemon!
+        The bar chart charts the number of pokemon in any given generation,
+        while the pie chart shows the overall split in the primary type of
+        all pokemon.<br>
+        Using the menus, and clicking on the charts, you can see the splits
+        of the pokemon and the spread they have. It's interesting to see how
+        types are split through each generation and even more interesting when
+        you see breakdowns of the legendary pokemon, with the more popular types
+        used in each generation.<br>
+        Play around with the data and see how each generation of Pokemon was made up!
+        Which is the most popular type in each generation? How many fire type
+        legendaries are there? and across which generations?</p>
 {% endblock %}
 {% block graph %}
     <div class="chart-wrapper">
         <div class="chart-title">
-            Pokemon data collation
+            Pokemon Generation Graph
         </div>
         <div class="chart-stage">
             <div id="pokemon-generation-chart"></div>
@@ -16,7 +27,7 @@
 {% block pie %}
     <div class="chart-wrapper">
         <div class="chart-title">
-            Pokemon breakdown
+            Type Breakdown
         </div>
         <div class="chart-stage">
             <div id="pokemon-pie"></div>
@@ -26,20 +37,21 @@
 {% block select1 %}
     <div class="chart-wrapper">
         <div class="chart-title">
-            PokeMenu
+            Pokemon Selection
         </div>
         <div class="chart-stage">
             <div id="pokemenu-main"></div>
+
         </div>
     </div>
 {% endblock %}
 {% block select2 %}
     <div class="chart-wrapper">
         <div class="chart-title">
-            Pokemon Select
+            Legendary select
         </div>
         <div class="chart-stage">
-            <div id="pokemenu-select"></div>
+            <div id="pokemenu-main1"></div>
         </div>
     </div>
 {% endblock %}
