--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Pokemon Dashboard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel=stylesheet" href="{{ url_for ('static',
+    <link rel="stylesheet" href="{{ url_for ('static',
         filename='lib/css/keen-dashboards.css') }}">
-    <link rel=stylesheet" href="{{ url_for ('static',
+    <link rel="stylesheet" href="{{ url_for ('static',
         filename='lib/css/dc.css') }}">
-    <link rel=stylesheet" href="{{ url_for ('static',
+    <link rel="stylesheet" href="{{ url_for ('static',
         filename='css/custom.css') }}">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -35,13 +35,12 @@
             </div>
             <ul class="nav navbar-nav collapse navbar-collapse" id="pokenav">
                 <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('teambuilder') }}">Team Builder</a></li>
             </ul>
         </div>
     </nav>
 </header>
 <div class="container">
-    <div class="col-lg-3 col-md-6 col-sm-12">
+    <div class="col-lg-2 col-md-6 col-sm-12">
         {% block paragraph %}
         {% endblock %}
     </div>
@@ -49,22 +48,23 @@
         {% block graph %}
         {% endblock %}
     </div>
-    <div class="col-lg-3 col-md-12 col-sm-12">
+    <div class="col-lg-4 col-md-12 col-sm-12">
         {% block pie %}
         {% endblock %}
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12">
-        {% block select1 %}
-        {% endblock %}
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-12">
-        {% block select2 %}
-        {% endblock %}
-    </div>
-    <div class="col-lg-12 col-md-12 col-sm-12">
+    <div class="col-lg-6 col-md-12 col-sm-12">
         {% block data %}
         {% endblock %}
     </div>
+    <div class="col-lg-2 col-md-6 col-sm-12">
+        {% block select1 %}
+        {% endblock %}
+    </div>
+    <div class="col-lg-2 col-md-6 col-sm-12">
+        {% block select2 %}
+        {% endblock %}
+    </div>
+
 </div>
 </body>
 </html>
